--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "elastic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest --clearCache && jest --watch",
+    "start": "nodemon -- -r tsconfig-paths/register ./src/app.ts",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,24 @@
   "bugs": {
     "url": "https://github.com/yudium/elastic-js/issues"
   },
-  "homepage": "https://github.com/yudium/elastic-js#readme"
+  "homepage": "https://github.com/yudium/elastic-js#readme",
+  "dependencies": {
+    "@elastic/elasticsearch": "^5.6.22"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "prettier": "2.6.0",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
+    "typescript": "^4.6.2"
+  }
 }
